# Trade_Agent_2

./: .env.example  .gitignore  fable_issues.md  issues.md  main.py  pyproject.toml  user_input_needed.md
config/: default.yaml  strategies.yaml
deploy/: trade-agent.service
docs/: tradingview_webhook.md  uml.md
scripts/: fetch_historical_data.py  performance_report.py  run_backtest.py  tune_strategies.py  verify_tpsl_demo.py
tests/: conftest.py  test_equity_curve_restart_persistence.py  test_fable_001_exchange_side_tpsl.py  test_fable_003_shutdown_race.py  test_fable_004_incremental_trade_persistence.py  test_fable_005_min_size_no_roundup.py  test_fable_006_close_fill_identity_matching.py  test_fable_007_drawdown_high_watermark.py  test_fable_009_post_exit_snapshot_refresh.py  test_fable_010_backtester.py  test_fable_011_alerting.py  test_fable_012_performance_stats.py  test_fable_014_config_enabled_strategies.py  test_fable_017_tradingview_webhook.py  test_fable_018_signal_log_conditions.py  test_issue_001_get_order_two_phase_lookup.py  test_issue_002_env_security.py  test_issue_003_singleton_guard.py  test_issue_004_await_fill_cancels_on_timeout.py  test_issue_005_candle_cache_age_refresh.py  test_issue_006_websocket_wired_in_main.py  test_issue_007_risk_exposure_includes_projected_order.py  test_issue_008_ping_pong_absent_from_yaml.py  test_issue_009_min_signal_strength_config.py  test_issue_010_async_subscriber_dispatched.py  test_issue_011_rsi_threshold_validation.py  test_issue_012_sma_recompute_regression_guard.py  test_issue_017_composite_attribution.py  (+23 more)
(+65 files in other folders)
