[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-agent-2"
version = "0.1.0"
description = "Automated cryptocurrency trading bot for BloFin exchange"
requires-python = ">=3.11"
dependencies = [
    "blofin>=0.5.0",
    "dash>=2.14,<5",
    "dash-ag-grid>=31.0",
    "plotly>=5.18",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    # Headless dashboard screenshots (visual checks). After install run
    # `playwright install chromium`; on WSL without sudo the missing system
    # libs live in ~/.local/lib/chrome-deps (see issues.md FABLE-016).
    "playwright>=1.60",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
